--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "project-manager",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "",
   "main": "src/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/main.js"
   },
   "author": "Ataberk ASLAN",
   "license": "ISC",
